--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,21 @@
     ],
     "paths": {
       "@assets/*": ["src/assets/*"],
+      "@components/*": ["src/components/*"],
+      "@context/*": ["src/context/*"],
+      "@hooks/*": ["src/hooks/*"],
       "@layouts/*": ["src/layouts/*"],
+      "@models/*": ["src/models/*"],
+      "@utilities/*": ["src/utilities/*"],
+      "@views/*": ["src/views/*"],
     },
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "next.config.js",
+  ],
   "exclude": ["node_modules"],
 }
